examples/k8s/ingress-tls-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tls-demo
spec:
  selector:
    app: tls-demo
  ports:
    - port: 80
      targetPort: 80
